1eë단계 회원가입 뷰 완료

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,7 +17,7 @@ spring:
     password: ${rds.password}
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: none # 디비 직접 만들어야 함
       default_batch_fetch_size: 100 # in query
     open-in-view: false
 logging:
