섬네일 완료

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/org.qlrm/qlrm
+	implementation group: 'org.qlrm', name: 'qlrm', version: '2.1.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.jsoup:jsoup:1.15.3'
 	implementation 'javax.servlet:jstl'
